--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@hapi/joi": "^17.1.1",
 		"bcrypt": "^4.0.1",
 		"koa": "^2.11.0",
 		"koa-body": "^4.1.1",
