--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"mongoose-unique-validator": "^2.0.3"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.3",
-		"standard": "^14.3.3"
+		"nodemon": "^2.0.3"
 	}
 }
